@@ -1,3 +1,5 @@
+#include "jsapi.h"
+#include "jsUtils.h"
 #include "headers.h"
 /*
 #include <stdio.h>
@@ -18,11 +20,18 @@
 #define XML_FMT_INT_MOD "l"
 #endif
 
+#define LINE XML_GetCurrentLineNumber(x3dparser)
+
 static int X3DParser_initialized = FALSE;
 static XML_Parser x3dparser;
 static int parentIndex = 0;
 #define PARENTSTACKSIZE 256
 struct X3D_Node *parentStack[PARENTSTACKSIZE];
+
+#define PARSING_NODES 1
+#define PARSING_SCRIPT 2
+static int parserMode = PARSING_NODES;
+
 
 /* DEF/USE table  for X3D parser */
 /* Script name/type table */
@@ -42,6 +51,7 @@ struct DEFnameStruct {
 struct DEFnameStruct *DEFnames = 0;
 int DEFtableSize = -1;
 int MAXDEFNames = 0;
+
 
 struct X3D_Node *DEFNameIndex (char *name, struct X3D_Node* node) {
 	unsigned len;
@@ -81,6 +91,8 @@ struct X3D_Node *DEFNameIndex (char *name, struct X3D_Node* node) {
 	return node;
 }
 
+
+
 /* parse a ROUTE statement. Should be like:
 	<ROUTE fromField="fraction_changed"  fromNode="TIME0" toField="set_fraction" toNode="COL_INTERP"/>
 */
@@ -112,18 +124,18 @@ static void parseX3DRoutes (char **atts) {
 		if (strncmp("fromNode",atts[i],8) == 0) {
 			fromNode = DEFNameIndex (atts[i+1], NULL);
 			if (fromNode == NULL) {
-				ConsoleMessage ("ROUTE statement, fromNode (%s) does not exist",atts[i+1]);
+				ConsoleMessage ("ROUTE statement, line %d fromNode (%s) does not exist",LINE,atts[i+1]);
 				error = TRUE;
 			}
 		} else if (strncmp("toNode",atts[i],6) == 0) {
 			toNode = DEFNameIndex (atts[i+1],NULL);
 			if (toNode == NULL) {
-				ConsoleMessage ("ROUTE statement, toNode (%s) does not exist",atts[i+1]);
+				ConsoleMessage ("ROUTE statement, line %d toNode (%s) does not exist",LINE,atts[i+1]);
 				error = TRUE;
 			}
 		} else if ((strncmp("fromField",atts[i],9)!=0) &&
 				(strncmp("toField",atts[i],7) !=0)) {
-			ConsoleMessage ("Field in ROUTE statement not understood: %s\n",atts[i]);
+			ConsoleMessage ("Field in line %d ROUTE statement not understood: %s",LINE,atts[i]);
 			error = TRUE;
 		}
 	}
@@ -140,7 +152,7 @@ static void parseX3DRoutes (char **atts) {
 				if (fieldInt >=0) findFieldInOFFSETS(NODE_OFFSETS[fromNode->_nodeType], 
 						fieldInt, &fromOffset, &fromType, &ctmp);
 				if (fromOffset <=0) {
-					ConsoleMessage ("field %s not found in node type %s\n",
+					ConsoleMessage ("ROUTE: line %d fromField %s not found in node type %s",LINE,
 						atts[i+1],stringNodeType(fromNode->_nodeType));
 					error = TRUE;
 				}
@@ -149,7 +161,7 @@ static void parseX3DRoutes (char **atts) {
 				if (fieldInt > 0) findFieldInOFFSETS(NODE_OFFSETS[toNode->_nodeType], 
 						fieldInt, &toOffset, &toType, &ctmp);
 				if (toOffset <=0) {
-					ConsoleMessage ("field %s not found in node type %s\n",
+					ConsoleMessage ("ROUTE: line %d toField  %s not found in node type %s", LINE,
 						atts[i+1],stringNodeType(toNode->_nodeType));
 					error = TRUE;
 				}
@@ -165,7 +177,7 @@ static void parseX3DRoutes (char **atts) {
 
 	if (!error) {
 		if (fromType != toType) {
-			ConsoleMessage ("Routing type mismatch %s != %s",stringFieldtypeType(fromType), stringFieldtypeType(toType));
+			ConsoleMessage ("Routing type mismatch line %d %s != %s",LINE,stringFieldtypeType(fromType), stringFieldtypeType(toType));
 			error = TRUE;
 		}
 	}
@@ -187,8 +199,11 @@ static int canWeIgnoreThisNode(char *name) {
 	if (strncmp ("X3D",name,3) == 0) {return TRUE;}
 return FALSE;
 }
-static void XMLCALL startElement(void *unused, const char *name, const char **atts) {
+
+/* parse normal X3D nodes/fields */
+void parseNormalX3D(char *name, char** atts) {
 	int i;
+
 	struct X3D_Node *thisNode;
 	struct X3D_Node *fromDEFtable;
 	int coffset;
@@ -197,27 +212,36 @@ static void XMLCALL startElement(void *unused, const char *name, const char **at
 	int foffset;
 
 	int myNodeType;
-
-	/* is this a node that we can ignore? */
-	if (canWeIgnoreThisNode(name)) return;
-
-	#ifdef X3DPARSERVERBOSE
-	for (i = 0; i < parentIndex; i++) putchar('\t');
-	printf ("Node Name %s ",name);
-	for (i = 0; atts[i]; i += 2) printf(" field:%s=%s", atts[i], atts[i + 1]);
-	printf ("\n");
-	#endif
-
 	/* create this to be a new node */	
 	myNodeType = findNodeInNODES(name);
+
 	if (myNodeType != -1) {
 		thisNode = createNewX3DNode(myNodeType);
 		parentStack[parentIndex] = thisNode; 
+
+		if (thisNode->_nodeType == NODE_Script) {
+			#ifdef X3DPARSERVERBOSE
+			printf ("working through script parentIndex %d\n",parentIndex);
+			#endif
+			parserMode = PARSING_SCRIPT;
+
+			((struct X3D_Script *)thisNode)->__scriptObj = nextScriptHandle();
+printf ("calling JSInit\n");
+			JSInit(((struct X3D_Script *)thisNode)->__scriptObj);
+printf ("called JSInit\n");
+		}
 
 		/* go through the fields, and link them in. SFNode and MFNodes will be handled 
 		 differently - these are usually the result of a different level of parsing,
 		 and the "containerField" value */
 		for (i = 0; atts[i]; i += 2) {
+			#ifdef X3DPARSERVERBOSE
+			if (parserMode == PARSING_SCRIPT) {
+				printf ("parsing script decl; have %s %s\n",atts[i], atts[i+1]);
+			}
+			#endif
+
+
 			if (strncmp ("DEF",atts[i],3) == 0) {
 				#ifdef X3DPARSERVERBOSE
 				printf ("this is a DEF, name %s\n",atts[i+1]);
@@ -225,7 +249,7 @@ static void XMLCALL startElement(void *unused, const char *name, const char **at
 
 				fromDEFtable = DEFNameIndex (atts[i+1],thisNode);
 				if (fromDEFtable != thisNode) {
-					ConsoleMessage ("Warning - duplicate DEF name: \'%s\'",atts[i+1]);
+					ConsoleMessage ("Warning - line %d duplicate DEF name: \'%s\'",LINE,atts[i+1]);
 				}
 
 			} else if (strncmp ("USE",atts[i],3) == 0) {
@@ -235,14 +259,14 @@ static void XMLCALL startElement(void *unused, const char *name, const char **at
 
 				fromDEFtable = DEFNameIndex (atts[i+1],thisNode);
 				if (fromDEFtable == thisNode) {
-					ConsoleMessage ("Warning - DEF name: \'%s\' not found",atts[i+1]);
+					ConsoleMessage ("Warning - line %d DEF name: \'%s\' not found",LINE,atts[i+1]);
 				} else {
 					#ifdef X3DPARSERVERBOSE
 					printf ("copying for field %s defName %s\n",atts[i], atts[i+1]);
 					#endif
 
 					if (fromDEFtable->_nodeType != fromDEFtable->_nodeType) {
-						ConsoleMessage ("Warning, DEF/USE mismatch, '%s', %s != %s",
+						ConsoleMessage ("Warning, line %d DEF/USE mismatch, '%s', %s != %s", LINE,
 							atts[i+1],stringNodeType(fromDEFtable->_nodeType), stringNodeType (thisNode->_nodeType));
 					} else {
 						thisNode = fromDEFtable;
@@ -260,16 +284,142 @@ static void XMLCALL startElement(void *unused, const char *name, const char **at
 	} else if (strncmp(name,"ROUTE",5) == 0) {
 		parseX3DRoutes(atts);
 	} else {
-		ConsoleMessage ("X3D Parser, node type %s not supported by FreeWRL",name);
+		ConsoleMessage ("X3D Parser, line %d node type %s not supported by FreeWRL",LINE,name);
 		return;
 	}
 
+
 	if (parentIndex < (PARENTSTACKSIZE-2)) 
 		parentIndex += 1;
-	else ConsoleMessage ("X3DParser, stack overflow");
+	else ConsoleMessage ("X3DParser, line %d stack overflow",LINE);
 	
 }
 
+static void parseScriptField(char *name, char **atts) {
+	int i;
+	uintptr_t myScriptNumber;
+
+	/* check sanity for top of stack This should be a Script node */
+	if (parentStack[parentIndex-1]->_nodeType != NODE_Script) {
+		ConsoleMessage ("X3DParser, line %d, expected the parent to be a Script node",LINE);
+		return;
+	}
+	
+	myScriptNumber = ((struct X3D_Script *)parentStack[parentIndex-1])->__scriptObj;
+
+	printf ("parsing script level %d name %s \n",parentIndex,name);
+	for (i = 0; atts[i]; i += 2) {
+		printf("	field:%s=%s\n", atts[i], atts[i + 1]);
+		if (strncmp(atts[i],"name",4) == 0) {
+			printf ("have name\n");
+		} else if (strncmp(atts[i],"accessType",10) == 0) {
+			printf ("have access type\n");
+		} else if (strncmp(atts[i],"type",4) == 0) {
+			printf ("have type\n");
+		} else {
+			ConsoleMessage ("X3D Script parsing line %d- unknown field type %s",LINE,atts[i]);
+			return;
+		}
+	}
+}
+
+
+static int inCDATA = FALSE;
+static char *scriptText = NULL;
+static int scriptTextMallocSize = 0;
+
+static void XMLCALL startCDATA (void *userData) {
+	#ifdef X3DPARSERVERBOSE
+	printf ("start CDATA\n");
+	#endif
+	inCDATA = TRUE;
+}
+
+static void XMLCALL endCDATA (void *userData) {
+	uintptr_t myScriptNumber;
+	char *startingIndex;
+	jsval rval;
+	#ifdef X3DPARSERVERBOSE
+	printf ("EndCData is %s\n",scriptText);
+	#endif
+	inCDATA = FALSE;
+
+	/* check sanity for top of stack This should be a Script node */
+	if (parentStack[parentIndex-1]->_nodeType != NODE_Script) {
+		ConsoleMessage ("X3DParser, line %d, expected the parent to be a Script node",LINE);
+		return;
+	}
+	
+	myScriptNumber = ((struct X3D_Script *)parentStack[parentIndex-1])->__scriptObj;
+
+	/* peel off the ecmascript etc */
+	startingIndex = strstr(scriptText,"ecmascript:");
+	if (startingIndex != NULL) {
+		startingIndex += strlen ("ecmascript:");
+	} else if (startingIndex == NULL) {
+		startingIndex = strstr(scriptText,"vrmlscript:");
+		if (startingIndex != NULL)
+			startingIndex += strlen ("vrmlscript:");
+	} else if (startingIndex == NULL) {
+		startingIndex = strstr(scriptText,"vrmlscript:");
+		if (startingIndex != NULL)
+			startingIndex += strlen ("vrmlscript:");
+	}
+
+	if (startingIndex == NULL) {
+		ConsoleMessage ("X3DParser, line %d have Script node, but no valid script",LINE);
+		return;
+	}
+
+	if (!ActualrunScript (myScriptNumber, scriptText, &rval)) {
+		ConsoleMessage ("X3DParser, script initialization error at line %d",LINE);
+		return;
+	}
+}
+
+static void XMLCALL handleCDATA (void *userData, const char *string, int len) {
+	char mydata[4096];
+	char firstTime;
+	if (inCDATA) {
+		/* do we need to set this string larger? */
+		if (len > scriptTextMallocSize-10) {
+			firstTime = (scriptTextMallocSize == 0);
+			scriptTextMallocSize +=4096;
+			if (firstTime) {
+				scriptText = malloc (scriptTextMallocSize);
+				scriptText[0] = '\0';
+			} else {
+				scriptText = realloc (scriptText,scriptTextMallocSize);
+			}
+		}
+		memcpy (mydata, string,len);
+		mydata[len] = '\0';
+		strcat (scriptText,mydata);
+/*
+		printf ("CDATA full text %s\n",scriptText);
+*/
+	
+	}
+}
+
+static void XMLCALL startElement(void *unused, const char *name, const char **atts) {
+	int i;
+
+	/* is this a node that we can ignore? */
+	if (canWeIgnoreThisNode(name)) return;
+
+	#ifdef X3DPARSERVERBOSE
+	for (i = 0; i < parentIndex; i++) putchar('\t');
+	printf ("Node Name %s ",name);
+	for (i = 0; atts[i]; i += 2) printf(" field:%s=%s", atts[i], atts[i + 1]);
+	printf ("\n");
+	#endif
+
+	/* what is the mode? normal X3D? script parsing?? */
+	if (parserMode == PARSING_SCRIPT) parseScriptField (name, atts);
+	else parseNormalX3D(name, atts);
+}
+	
 static void XMLCALL endElement(void *unused, const char *name) {
 	int i;
 
@@ -281,7 +431,32 @@ static void XMLCALL endElement(void *unused, const char *name) {
 
 	/* is this a node that we can ignore? */
 	if (canWeIgnoreThisNode(name)) return;
-	if (parentIndex > 1) parentIndex -= 1; else ConsoleMessage ("X3DParser, stack underflow\n");
+	
+	/* is this a Script? */
+	if (strncmp (name,"field",5) == 0) {
+		if (parserMode != PARSING_SCRIPT) {
+			ConsoleMessage ("X3DParser: line %d Got a <field> but not parsing Scripts",LINE);
+			printf ("Got a <fieldt> but not parsing Scripts\n");
+		}
+		return;
+	}
+
+
+	/* sanity check here */
+	if (parserMode == PARSING_SCRIPT) {
+		if (strncmp (name,"Script",6) != 0) 
+		ConsoleMessage ("X3DParser line %d endElement, name %s, still PARSING_SCRIPTS",LINE,name);
+	} 
+
+
+	/* is this the end of a Script? */
+	if (strncmp(name,"Script",6) == 0) {
+		printf ("got END of script - script should be registered\n");
+		parserMode = PARSING_NODES;
+	}
+
+	
+	if (parentIndex > 1) parentIndex -= 1; else ConsoleMessage ("X3DParser, line %d stack underflow",LINE);
 
 
 	#ifdef X3DPARSERVERBOSE
@@ -317,7 +492,7 @@ static void XMLCALL endElement(void *unused, const char *name) {
 	}
 
 	if ((ctype != MFNODE) && (ctype != SFNODE)) {
-		ConsoleMessage ("X3DParser, trouble linking to field %s, node type %s (this nodeType %s)",
+		ConsoleMessage ("X3DParser, line %d trouble linking to field %s, node type %s (this nodeType %s)", LINE,
 			stringFieldType(parentStack[parentIndex]->_defaultContainer),
 			stringNodeType(parentStack[parentIndex-1]->_nodeType),
 			stringNodeType(parentStack[parentIndex]->_nodeType));
@@ -341,6 +516,8 @@ static void XMLCALL endElement(void *unused, const char *name) {
 int initializeX3DParser () {
 	x3dparser = XML_ParserCreate(NULL);
 	XML_SetElementHandler(x3dparser, startElement, endElement);
+	XML_SetCdataSectionHandler (x3dparser, startCDATA, endCDATA);
+	XML_SetDefaultHandler (x3dparser,handleCDATA);
 	XML_SetUserData(x3dparser, &parentIndex);
 }
 
@@ -364,7 +541,7 @@ int X3DParse (struct X3D_Group* myParent, char *inputstring) {
 		return FALSE;
 	}
 	if (parentIndex != 1) {
-		ConsoleMessage ("X3DParser - stack issues.... parentIndex %d",parentIndex);
+		ConsoleMessage ("X3DParser line %d  - stack issues.... parentIndex %d",LINE,parentIndex);
 		return FALSE;
 	}
 	return TRUE;
